Work on chronam topics and similar/related pages

--- a/loc/templates/site_base_alt.html
+++ b/loc/templates/site_base_alt.html
@@ -7,7 +7,7 @@
     <ul class="bold arrow_o">
       <li><a href="{% url 'chronam_about' %}">About Chronicling America</a></li>
       <li><a href="{% url 'chronam_about_api' %}">About the Site and API</a></li>
-      <li><a href="http://www.loc.gov/rr/news/topics/topics.html">Recommended Topics</a></li>
+      <li><a href="{% url 'recommended_topics' %}">Recommended Topics</a></li>
       <li><a href="{% url 'chronam_help' %}">Help</a></li>
     </ul>
   </div>
