work on similar/related items

--- a/loc/static/base.css
+++ b/loc/static/base.css
@@ -1083,6 +1083,34 @@ width:700px;
 width:714px;
 float:right;
 }
+
+.related-carousel-body {
+border:5px solid #666;
+margin-bottom:1.25em;
+background-color:#eeebe6;
+width: 945px;
+border-top: 2px;
+}
+
+.related-carousel-inner{
+overflow: scroll;
+padding: 25px 0px 25px 0px;
+margin-left: 30px;
+margin-right: 30px;
+}
+
+.related-carousel-body ul{
+padding: 5px 0px 0px 0px;
+list-style-type: none;
+display: table;
+}
+
+.related-carousel-body ul li{
+padding-right: 25px;
+display: inline;
+display: table-cell;
+}
+
 .carousel-menu {
     background:#ccc url(./images/dot.gif) 0 bottom repeat-x;
     padding:9px 10px 10px 10px;
@@ -1764,6 +1792,7 @@ table.marc-record span.marc-subfield-value {}
     width: auto;
     margin: 0;
     padding: 0;
+    overflow: none;
 }
 #imageViewer_nav {
     width:auto;
@@ -1913,6 +1942,7 @@ cursor:hand;
 .item-foot {
     padding:15px 15px 5px 15px;
 }
+
 
 #holdings_page a#page_nav_holdings,
 #issues_page a#page_nav_issues,
