--- a/loc/static/base.css
+++ b/loc/static/base.css
@@ -1095,12 +1095,10 @@ border-top: 2px;
 .related-carousel-inner{
 overflow: scroll;
 padding: 25px 0px 25px 0px;
-margin-left: 30px;
-margin-right: 30px;
 }
 
 .related-carousel-body ul{
-padding: 5px 0px 0px 0px;
+margin: 5px 0px 0px 0px;
 list-style-type: none;
 display: table;
 }
