--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -174,7 +174,7 @@
           <!-- view --> 
           <a class="text" href="{% url 'chronam_page_ocr' title.lccn issue.date_issued issue.edition page.sequence %}">Text</a> <span>|</span> <a href="{% url 'chronam_page_pdf' title.lccn issue.date_issued issue.edition page.sequence %}">PDF</a> 
           <!-- download --> 
-          <span>|</span> <a href="{% url 'chronam_page_jp2' title.lccn issue.date_issued issue.edition page.sequence %}">JP2 ({{image_size}})</a> 
+          <span>|</span> <a href="{% url 'chronam_page_jp2' title.lccn issue.date_issued issue.edition page.sequence %}" download="{{ title.lccn }}-{{ issue.date_issued|date:"Ymd" }}.jp2">JP2 ({{ image_size }})</a>
         </span>
         <span class="c-clip">
              <a id="clip" href="#" target="print"><img src="{% static 'images/item_clip_icon.png' %}" width="18" height="17" alt="Clip Image" /></a>
