--- a/loc/templates/includes/results_ctrl.html
+++ b/loc/templates/includes/results_ctrl.html
@@ -44,6 +44,7 @@
             <input type="hidden" name="lccn" value="{{query.lccn}}" />
             <input type="hidden" name="rows" value="{{query.rows}}" />
             <input type="hidden" name="sequence" value="{{query.sequence}}" />
+            <input type="hidden" name="language" value="{{query.language}}" />
         <input type="submit" class="submit" value="GO" />
       </form>
     </div>
