--- a/core/templates/search_titles_results.html
+++ b/core/templates/search_titles_results.html
@@ -66,20 +66,20 @@
 <div class="search_results_ctrl top fix-float">
     {% include 'includes/titles_results_ctrl.html' %}
 </div><!-- end class:search_results_ctrl --> 
-
+{{request.GET}}
 <div class="search_results_body">
     <div class="results_nav">
         <p class="term">Your title search returned {{ paginator.count }} results 
-        {% if request.REQUEST.state %}
-              &nbsp for states {{ request.REQUEST.state }}
+        {% if request.GET.state %}
+              &nbsp for states {{ request.GET.state }}
               <a href="#" id="cancel_state_filter"><img src="{% static 'images/btn_remove.png' %}" title="clear state filter" alt="remove state filter"/></a>
         {% endif %} 
-        {% if request.REQUEST.county %}
-              &nbsp for county {{ request.REQUEST.county }}
+        {% if request.GET.county %}
+              &nbsp for county {{ request.GET.county }}
               <a href="#" id="cancel_county_filter"><img src="{% static 'images/btn_remove.png' %}" title="clear county filter" alt="remove county filter"/></a>
         {% endif %} 
-        &nbsp for date range {% firstof request.REQUEST.year1 '1690' %} - {% firstof request.REQUEST.year2 'present' %}
-        {% if request.REQUEST.year1 or request.REQUEST.year2 %}
+        &nbsp for date range {% firstof request.GET.year1 '1690' %} - {% firstof request.GET.year2 'present' %}
+        {% if request.GET.year1 or request.GET.year2 %}
             <a href="#" id="cancel_date_filter"><img src="{% static 'images/btn_remove.png' %}" title="clear date filter" alt="remove date filter"/></a>
         {% endif %}
         <br /></p> 
