--- a/loc/templates/search_pages_results.html
+++ b/loc/templates/search_pages_results.html
@@ -8,6 +8,7 @@
 <script type="text/javascript">
 
 jQuery(function($){
+    $.ajaxSettings.traditional = true;
     $("#sort_select option[value='{{sort}}']").attr("selected", true);
     $("#rpp_select option[value='{{rows}}']").attr("selected", true);
     if ($.deparam.querystring().sequence == 1){ 
