--- a/loc/templates/includes/tabs.html
+++ b/loc/templates/includes/tabs.html
@@ -61,7 +61,7 @@
                     <label for="id_date1" class="norm">from</label>
                     {{ search_form.date1 }}
                     <label for="id_date2" class="norm">to</label>
-                    {{ search_form.date2 }} 
+                    {{ search_form.date2 }}
                 </fieldset>
                 </p>
                 <br />
@@ -77,8 +77,7 @@
             </div>
             <div class="clear-form"><!-- --></div>
             <p><label for="id_sequence">Limit Search:</label>
-            {{ search_form.sequence }} only front page or Specific page {{ adv_search_form.sequence }}
-            {{ search_form.issue_date }} only specific issues {{ adv_search_form.date_month }} {{ adv_search_form.date_day }}</p>
+            {{ search_form.sequence }} only front page or Specific page {{ adv_search_form.sequence }}</p>
                 <span><label for="id_language">Language</label>
                 {{ adv_search_form.language }}
                 </span>
