refs #105 - Minor correction in about page

--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -37,7 +37,7 @@
   <ul>
   <li>National Endowment for the Humanities - <a href="http://www.neh.gov/index.html" shape="rect">http://www.neh.gov/index.html</a></li>
   <li>Newspaper and Periodicals Reading Room (Serial and Government Publication Division), Library of Congress - <a href="http://www.loc.gov/rr/news/" shape="rect">http://www.loc.gov/rr/news/</a></li>
-  <li>Historic Newspaper Collections at the Library of Congress - <a href="https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s" shape="rect">https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s</a></li>
+  <li>Collections with Newspapers at the Library of Congress - <a href="https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s" shape="rect">https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s</a></li>
   <li>List of Awardee Institutions and Web sites <a href="http://loc.gov/ndnp/listawardees.html" shape="rect">http://loc.gov/ndnp/listawardees.html</a></li>
   </ul>
   <h3><a id="rights_and_reproductions" shape="rect">Rights and Reproductions</a></h3>
