added HTML for CHRONAM-278 and CHRONAM-279

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -30,6 +30,13 @@ please see the <a href="https://github.com/LibraryofCongress/chronam">LibraryOfC
 Also, please consider subscribing to the <a href="http://listserv.loc.gov/archives/chronam-users.html">ChronAm-Users</a> discussion list
 if you want to discuss how to use or extend the software or data from its
 APIs.</p>
+
+<p>
+    If you’re interested in other data and machine-usable interfaces available from
+    the Library of Congress, you might find the LC for Robots page helpful at
+    <a href=" https://labs-dev.loc.gov/lc-for-robots/++">
+        https://labs-dev.loc.gov/lc-for-robots/++ </a>
+</p>
  
 <h2>The API</h2> 
 <h3>Jump to:</h3> 
