fixing link for beyondwords

--- a/loc/templates/site_base_alt.html
+++ b/loc/templates/site_base_alt.html
@@ -19,7 +19,7 @@
       <li><a href="http://www.loc.gov/rr/news/">Newspaper and Current Periodicals Reading Room</a></li>
       <li><a href="http://www.loc.gov/rr/askalib/ask-news.html">Ask LC Newspaper &amp; Current Periodicals Librarian</a></li>
       <li><a href="http://www.flickr.com/photos/library_of_congress/collections/72157619370519453/" class="external">Historic Newspapers on Flickr<span> external link</span></a><br />(part of the LC Flickr Commons photostream)</li>
-      <li><a href="http://beyond-words-627102883.us-east-1.elb.amazonaws.com/#/">Beyond Words</a>
+      <li><a href="http://beyondwords.labs.loc.gov">Beyond Words</a>
       (Help find pictures in historic newspapers!)
       </li>
     </ul>
