--- a/loc/templates/page_text.html
+++ b/loc/templates/page_text.html
@@ -25,7 +25,7 @@
     <h1>{{page}}</h1>
     <h3>Image and text provided by {{issue.batch.awardee.name}}</h3>
     <h3>Persistent link: <a href="{{page.url}}">http://{{host}}{{page.url}}</a></h3>
-    </div> 
+    </div>
 
     <h2><a href="{% url 'chronam_ocr' %}">What is OCR?</a></h2>
 
@@ -37,12 +37,16 @@
     <br />
     </div>
 
+    {% if text %}
+    {{ text.0|linebreaks }}
+    {% else %}
     <div>
     {{page.ocr.text|escape|linebreaks}}
     </div>
+    {% endif %}
 
     <p>
-    <a href="{% url 'chronam_page_ocr_xml' title.lccn issue.date_issued issue.edition page.sequence %}">xml</a> | 
+    <a href="{% url 'chronam_page_ocr_xml' title.lccn issue.date_issued issue.edition page.sequence %}">xml</a> |
     <a href="{% url 'chronam_page_ocr_txt' title.lccn issue.date_issued issue.edition page.sequence %}">txt</a>
     </p>
 
