CHRONAM-361 Code refactoring for Legacy ChronAm/added changes to core/index.py, core/browse.py, page.html and page_text.html

--- a/loc/templates/page_text.html
+++ b/loc/templates/page_text.html
@@ -39,7 +39,7 @@
 
     <div>
     {% if text %}
-    {{ text|join:" // "|linebreaks }}
+    {{ text|join:" <br><br> "|linebreaks }}
     {% endif %}
     </div>
 
