loc home.html: add preload for /tabs
This will cause the browser to request the /tabs HTML page
before the JavaScript has been loaded and parsed.

See http://caniuse.com/#feat=link-rel-preconnect

Browser support is around 70-80% depending on the data sample:

http://caniuse.com/#feat=link-rel-prefetch

--- a/loc/templates/home.html
+++ b/loc/templates/home.html
@@ -3,6 +3,12 @@
 {% load static from staticfiles %}
 {% load humanize %}
  
+
+{% block extrahead %}
+    <link rel="preload" as="html" href="/tabs">
+    {{ block.super }}
+{% endblock extrahead %}
+
 {% block javascript %}
 {{ block.super }}
 <!-- jCarousel --> 
