--- a/core/templates/help.html
+++ b/core/templates/help.html
@@ -27,8 +27,8 @@
 
 <h4>Why are there pages from only certain states?</h4>
 <p><i>Chronicling America</i> is sponsored by the National Digital Newspaper Program (NDNP).  This program, funded by the National Endowment for the Humanties (NEH), awards money to public newspaper archives in each state to digitize and deliver historic newspaper content to the Library of Congress for inclusion in <i>Chronicling America</i>.  Cultural heritage institutions within the states apply for the NEH grants.  For information on what states are contributing digitized newspapers to the program, see the <a href="http://www.loc.gov/ndnp/awards/">NDNP Award Recipients</a>*. Eventually, the NEH will fund awards in every state and territory.</p>
-<p>** The Library of Congress contributes digitized content from Washington, DC <strike>(1836-1922)</strike> and other significant material.</p>
-<p>Note: Awardees may select papers to digitize within the time period eligibility of their award. All periods may not be selected or available at this time, but content representing these states and time periods may be scheduled to be added in future updates. <strike>Additionally, due to copyright restrictions the collection does not include newspapers published after December 31, 1922.</strike></p>
+<p>** The Library of Congress contributes digitized content from Washington, DC and other significant material.</p>
+<p>Note: Awardees may select papers to digitize within the time period eligibility of their award. All periods may not be selected or available at this time, but content representing these states and time periods may be scheduled to be added in future updates.</p>
 
 <h4>When will more pages be available?</h4>
 <p><i>Chronicling America</i> is updated regularly with additional content received from awardees. NEH hosts an NDNP annual award competition, gradually increasing the content time period and the geographic representation through additional awards.</p>
