--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -16,6 +16,26 @@
           href="http://www.loc.gov/rss/ndnp/ndnp.xml" />
     <meta http-equiv="Content-Language" content="en-us" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="dc.title" content="Chronicling America « Library of Congress" />
+    <meta name="description" content="Search America's historic newspaper pages from {{ fulltext_startdate }}-{{ fulltext_enddate }} or use the U.S. Newspaper Directory to find information about American newspapers published between 1690-present. " />
+    <meta name="dc.contributor" content="National Endowment for the Humanities" />
+    <meta name="dc.subject" content="American history" />
+    <meta name="dc.subject" content="Historical Newspapers" />
+    <meta name="dc.subject" content="America\'s historic newspapers" />
+    <meta name="dc.subject" content="chronicling America" />
+    <meta name="dc.coverage.spatial" content="United states of America" />
+    <meta name="dc.coverage.temporal" content="{{ fulltext_startdate }} - {{ fulltext_enddate }}" />
+    <meta name="dc.identifier" content="http://chroniclingamerica.loc.gov/" />
+    <meta rel="canonical" href="http://chroniclingamerica.loc.gov/" />
+    <meta name="dc.type" content="Text" />
+    <meta name="dc.type" content="Still image" />
+    <meta name="dc.type" content="Newspaper" />
+    <meta name="dc.type" content="Periodical" />
+    <meta name="dc.type" content="Web page" />
+    <meta name="dc.rights" content="Text is U.S. Government Work" />
+    <link rel="dc.rights" title="Rights Restriction" href="//www.loc.gov/text-us-government-work" />
+    <link rel="dc.rights" title="Rights Restriction" href=" http://chroniclingamerica.loc.gov/about/#rights_and_reproductions" />
+    <meta name="dc.language" content="eng" />
     <link rel="preconnect" href="//cdn.loc.gov">
     <link type="text/css" rel="stylesheet" href="{% static 'base.css' %}" />
     <link type="text/css" rel="stylesheet"
