--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -25,8 +25,8 @@
     <meta name="dc.subject" content="chronicling America" />
     <meta name="dc.coverage.spatial" content="United states of America" />
     <meta name="dc.coverage.temporal" content="{{ fulltext_startdate }} - {{ fulltext_enddate }}" />
-    <meta name="dc.identifier" content="http://chroniclingamerica.loc.gov/" />
-    <meta rel="canonical" href="http://chroniclingamerica.loc.gov/" />
+    <meta name="dc.identifier" content="https://chroniclingamerica.loc.gov/" />
+    <meta rel="canonical" href="https://chroniclingamerica.loc.gov/" />
     <meta name="dc.type" content="Text" />
     <meta name="dc.type" content="Still image" />
     <meta name="dc.type" content="Newspaper" />
@@ -34,7 +34,7 @@
     <meta name="dc.type" content="Web page" />
     <meta name="dc.rights" content="Text is U.S. Government Work" />
     <link rel="dc.rights" title="Rights Restriction" href="//www.loc.gov/text-us-government-work" />
-    <link rel="dc.rights" title="Rights Restriction" href=" http://chroniclingamerica.loc.gov/about/#rights_and_reproductions" />
+    <link rel="dc.rights" title="Rights Restriction" href=" https://chroniclingamerica.loc.gov/about/#rights_and_reproductions" />
     <meta name="dc.language" content="eng" />
     <link rel="preconnect" href="//cdn.loc.gov">
     <link type="text/css" rel="stylesheet" href="{% static 'base.css' %}" />
