refs #CHRONAM-382 - fixing minor spelling and punctuation

--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -16,14 +16,14 @@
           href="http://www.loc.gov/rss/ndnp/ndnp.xml" />
     <meta http-equiv="Content-Language" content="en-us" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="dc.title" content="Chronicling America « Library of Congress" />
+    <meta name="dc.title" content="Chronicling America | Library of Congress" />
     <meta name="description" content="Search America's historic newspaper pages from {{ fulltext_startdate }}-{{ fulltext_enddate }} or use the U.S. Newspaper Directory to find information about American newspapers published between 1690-present. " />
     <meta name="dc.contributor" content="National Endowment for the Humanities" />
-    <meta name="dc.subject" content="American history" />
+    <meta name="dc.subject" content="American History" />
     <meta name="dc.subject" content="Historical Newspapers" />
-    <meta name="dc.subject" content="America\'s historic newspapers" />
-    <meta name="dc.subject" content="chronicling America" />
-    <meta name="dc.coverage.spatial" content="United states of America" />
+    <meta name="dc.subject" content="America's Historic Newspapers" />
+    <meta name="dc.subject" content="Chronicling America" />
+    <meta name="dc.coverage.spatial" content="United States of America" />
     <meta name="dc.coverage.temporal" content="{{ fulltext_startdate }} - {{ fulltext_enddate }}" />
     <meta name="dc.identifier" content="https://chroniclingamerica.loc.gov/" />
     <meta rel="canonical" href="https://chroniclingamerica.loc.gov/" />
