--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -355,6 +355,8 @@ bulk access to the underlying data sets. The initial bulk data sets include:
     <a href="{% url 'chronam_ocr_json' %}">JSON</a> feeds that will allow
     you to build automated workflows for updating your local collection.</li>
 </ul>
+
+Please note: Some batches contain digitized newspaper pages that lack corresponding OCR text.  For this reason, after decompressing the downloadable files, the number of ocr.txt files may not match the page count available within the HTML, Atom and JSON batch views.
 </p>
 <p class="backtotop"><a href="#skip_menu">Top</a></p> 
 
