--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -53,6 +53,10 @@ If you are interested in automated access to this data you may want to use the
 </p>
 
 <p>
+Please note: Some batches contain digitized newspaper pages that lack corresponding OCR text.  For this reason, after decompressing the downloadable files, the number of ocr.txt files may not match the page count available within the HTML, Atom and JSON batch views.
+</p>
+
+<p>
 </p>
 
 <table class="data table table-striped table-hover">
