refs #CHRONAM-541 - changed link for lc-for-robots to point to production instead of dev

--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -34,8 +34,8 @@ APIs.</p>
 <p>
     If you’re interested in other data and machine-usable interfaces available from
     the Library of Congress, you might find the LC for Robots page helpful at
-    <a href=" https://labs-dev.loc.gov/lc-for-robots/++">
-        https://labs-dev.loc.gov/lc-for-robots/++ </a>
+    <a href=" https://labs.loc.gov/lc-for-robots/++">
+        https://labs.loc.gov/lc-for-robots/++ </a>
 </p>
  
 <h2>The API</h2> 
