--- a/core/templates/reports/batch.html
+++ b/core/templates/reports/batch.html
@@ -37,7 +37,7 @@
     </tr>
     <tr class="lightGray">
         <td>Bag Location:</td>
-        <td><a href="/data/batches/{{ batch.name }}">{{ batch.name }}</a>
+        <td><a href="/data/batches/{{ batch.name }}/">{{ batch.name }}</a>
     </tr>
     <tr class="white">
         <td>Validated Batch File:</td>
@@ -47,7 +47,7 @@
         <td>LCCNs In Batch:</td>
         <td>
             {% for lccn in batch.lccns %}
-            <a href="{% url 'chronam_title' lccn %}">{{ lccn }}</a> 
+            <a href="{% url 'chronam_title' lccn %}">{{ lccn }}</a>
             {% endfor %}
         </td>
     </tr>
@@ -89,7 +89,7 @@
       <td><a href="{% url 'chronam_reel' reel.number %}">{{ reel.number }}</a></td>
         <td>
             {% for title in reel.titles %}
-            <a href="{% url 'chronam_title' title.lccn %}">{{ title.display_name }} ({{title.lccn}})</a> 
+            <a href="{% url 'chronam_title' title.lccn %}">{{ title.display_name }} ({{title.lccn}})</a>
             {% endfor %}
         </td>
       <td>{{ reel.title_range }}</td>
