--- a/loc/templates/base.html
+++ b/loc/templates/base.html
@@ -121,6 +121,12 @@
 <!-- END Content -->
 
 {% block javascript %}
+
+{% if RAVEN_PUBLIC_DSN %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raven.js/3.26.1/raven.min.js" integrity="sha256-N3YzTdAC27tvNKpIM2rly/WvlJf8YAat0NjPXgh5Bw4=" crossorigin="anonymous"></script>
+    <script>Raven.config('{{ RAVEN_PUBLIC_DSN }}').install()</script>
+{% endif %}
+
 {{ block.super }}
 <script src="{% static 'js/jquery-ui.js' %}" ></script>
 
