Fix /tabs preload hint

--- a/loc/templates/home.html
+++ b/loc/templates/home.html
@@ -5,7 +5,7 @@
 
 
 {% block extrahead %}
-    <link rel="preload" as="html" href="/tabs">
+    <link rel="preload" as="fetch" href="/tabs">
     {{ block.super }}
 {% endblock extrahead %}
 
